# BreachTheBeach

./: .gitignore  LICENSE  README.md  main.py  multy_ray_trcer_test.py  om_downloader.py  pyproject.toml
demo/: NovorossCoastlineAdded.geojson
pypeline/: 1_coastline_builder.py  2_point_extraction.py  3_normals_calculation.py  4_1_whether_grid_demo_to_qgis.py  4_whether_point_colculation.py  5_line_merger.py  6_ray_tracer.py  7_bathymetry.py  8_wave_climate_batch_pipeline.py  9_wave_exposure_index_pipeline.py
src/base/: BBox.py
src/bathymetry/: __init__.py  errors.py
src/bathymetry/adapters/: BathymetryServiceAdapter.py  __init__.py
src/bathymetry/cache/: __init__.py  bathymetry_cache.py
src/bathymetry/domain/: __init__.py  models.py
src/bathymetry/exporters/: CSVProfileExporter.py  GeoTIFFBathymetryExporter.py  NetCDFBathymetryExporter.py  __init__.py  base.py
src/bathymetry/factories/: BathymetryLoaderFactory.py  __init__.py  loader_factory.py
src/bathymetry/interpolation/: __init__.py  depth_interpolator.py
src/bathymetry/loaders/: BathymetryLoader.py  EMODnetBathymetryLoader.py  (+8 more)
src/coastline/: CoastlineDataset.py  MainCoastlineBuilder.py
src/utils/: setup_logger.py
src/waves/: __init__.py  energy.py  index_service.py  indices.py  shoreline.py  stats.py
src/weather_history/: WeatherLayerWrapper.py  __GribWeatherLayerWrapper.py  assignment.py
src/wind_fetch/: CoastlineSpatialIndex.py  SequentialMultiDirectionFetchCalculator.py  WindFetchCalculator.py  WindFetchConfig.py  WindFetchParallelRunner.py  WindFetchResult.py  WindFetchVisualizer.py  __init__.py  cli.py  geometry_utils.py  models.py
(+86 files in other folders)
