[tool.poetry]
name = "breachthebeach"
version = "0.1.0"
description = ""
authors = ["Ratven666 <61912742+Ratven666@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.34.2"
geopandas = "^1.1.3"
shapely = "^2.1.2"
osmium = "^4.3.1"
loguru = "^0.7.3"
networkx = "^3.6.1"
matplotlib = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
