[tool.poetry]
name = "breachthebeach"
version = "0.1.0"
description = ""
authors = ["Ratven666 <61912742+Ratven666@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.34.2"
geopandas = "^1.1.3"
shapely = "^2.1.2"
osmium = "^4.3.1"
loguru = "^0.7.3"
networkx = "^3.6.1"
matplotlib = "^3.10.9"
xarray = "^2026.4.0"
cdsapi = "^0.7.7"
netcdf4 = "^1.7.4"
numpy = "^2.4.6"
pandas = "^3.0.3"
cfgrib = "^0.9.15.1"
scipy = "^1.17.1"
plotly = "^6.8.0"
pyproj = "^3.7.0"
pydap = "^3.5.9"
rasterio = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
